Fix MS Store Link

--- a/src/PsnStickers/Views/Home/Index.cshtml
+++ b/src/PsnStickers/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     <h2>Quick Plug: </h2>
     <h3>Download PSN.appx, your gateway to the PlayStation Network on Windows 10! It's free! It's <a href="https://github.com/drasticactions/PlayStation-App">open source</a>! No ads! It should be pleasant to use!
     </h3>
-    <a href="https://www.microsoft.com/store/apps/9nblggh6cvbj" class="img-responsive"><img src="http://i.imgur.com/gkuUNgf.jpg"/></a>
+    <a target="_blank" href="https://www.microsoft.com/store/apps/9nblggh6cvbj" class="img-responsive"><img src="http://i.imgur.com/gkuUNgf.jpg"/></a>
 </div>
 
 <div class="row">
