--- a/src/PsnStickers/Views/Home/About.cshtml
+++ b/src/PsnStickers/Views/Home/About.cshtml
@@ -7,7 +7,7 @@
 
 <h2>About PSN Stickers</h2>
 
-<p><b>TD;RL: I reverse engineered Sony’s PlayStation Messages app to pull out the calls used to get the stickers to the app. Then I made this website around those endpoints. Boom.</b></p>
+<p><b>TR;DL: I reverse engineered Sony’s PlayStation Messages app to pull out the calls used to get the stickers to the app. Then I made this website around those endpoints. Boom.</b></p>
 
 <p>Also note: I make a ton of assumptions about how Sony’s PSN APIs work. I am most likely wrong, and I would love to be corrected if so.</p>
 
